# cell-segmentation-arena

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml  requirements-local.txt  requirements.txt
arena/: __init__.py  client.py  config.py  data.py  labels.py  local_models.py  processing.py  scoring.py  viz.py  wire.py
backend/: admin.py  app.py  e2e_workflow.py  finetune_e2e.py  leaderboard.py  leaderboard_smoke.py  smoke_test.py  tune_watershed.py
board/: index.html
data_prep/: __init__.py  build_dataset.py
docs/: operator-runbook.md  participant-guide.md
notebook/: build_notebook.py  workshop.ipynb
tests/: test_processing.py  test_scoring.py  test_wire.py
tokens/: generate_tokens.py
