[project]
name = "cell-arena"
version = "0.3.1"
description = "Participant toolkit for the dense-cell segmentation competition workshop."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# Default deps must stay tiny, pure-Python, no compilation, and install on stock
# Python 3.9 (what most laptops ship). NO pycocotools — scoring is pure numpy.
# Lower bounds chosen so pip resolves a 3.9-compatible wheel for each.
dependencies = [
    "requests>=2.28",
    "numpy>=1.23",
    "pillow>=9.0",
    "scikit-image>=0.19",
    "matplotlib>=3.6",
    "jupyter-bbox-widget>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
